Fixed up gitignore file, pushed my test set of outcomes files, pushed small alterations to basis output

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
 *~
 *.ui
 *.uo
-
+\#*
+*.dot
+*.snm
+*.tests
+*.failures
+partition-fest/basistest.sml
+partition-fest/causes
+*.witness*
+*backup*
+*.pdf
+*.nav
+essay/avg
+tmp
 .cm
